@@ -1,3 +1,12 @@
+2002-11-08  Richard Hult  <rhult@codefactory.se>
+
+	* src/dh-main.c (main): Reimplement searching in an already
+	running devhelp process and add a -q option to quit the running
+	process.
+
+	* src/dh-base.c (dh_base_new_window): Comment out connection to
+	new_window_requested signal.
+
 2002-11-08  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/dh-keyword-model.c: added a max number of hits, makes the
